Wed Jan 30 13:09:30 CET 2013
	Adding more 'const' to allow keeping of reason phrases in ROM.
	(see mailinglist). -CG/MV

Tue Jan 29 21:27:56 CET 2013
	Make code work with PlibC 0.1.7 (which removed plibc_init_utf8).
	Only relevant for W32. Fixes #2734. -CG

Sat Jan 26 21:26:48 CET 2013
	Fixing regression introduced Jan 6 (test on data_size instead
	of total_size. -CG

Fri Jan 11 23:21:55 CET 2013
	Also return MHD_YES from MHD_destroy_post_processor if
	we did not get '\r\n' in the upload. -CG

Sun Jan  6 21:10:13 CET 2013
	Enable use of "MHD_create_response_from_callback" with
	body size of zero. -CG

Tue Dec 25 16:16:30 CET 2012
	Releasing libmicrohttpd 0.9.24. -CG

Tue Dec 18 21:18:11 CET 2012
	Given both 'chunked' encoding and 'content-length',
	ignore the 'content-length' header as per RFC. -ES

Thu Dec  6 10:14:44 CET 2012
	Force adding "Connection: close" header to response if
	client asked for connection to be closed (so far, we
	did close the connection, but did not send the
	"Connection: close" header explicitly, which some clients
	seem to dislike. (See discussion on mailinglist).
	Also, if there is already a transfer-encoding other
	than 'chunked' set by the application, we also now close
	the connection if the response is of unknown size. -CG

Wed Dec  5 19:22:26 CET 2012
	Fixing parameter loss of POST parameters with IE8 and Chrome
	in the PostProcessor as the code failed to properly handle
	partial data. -MM

Fri Nov  9 21:36:46 CET 2012
	Releasing libmicrohttpd 0.9.23. -CG

Thu Nov  8 22:32:59 CET 2012
	Ship our own version of tsearch and friends if not provided by platform,
	so that MHD works nicely on Android. -JJ

Mon Oct 22 13:05:01 CEST 2012
	Immediately do a second read if we get a full buffer from
	TLS as there might be more data in the TLS buffers even if
	there is no activity on the socket. -CG

Tue Oct 16 01:33:55 CEST 2012
	Consistently use "#ifdef" and "#ifndef" WINDOWS, and not
	sometimes "#if". -CG

Sat Sep  1 20:51:21 CEST 2012